# password_manager

./: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: __init__.py  auth.py  vault.py
app/core/: create_vault.py  login.py  password_gen.py  register_user.py
app/db/: database.py  db.py
app/domain/: auth.py  vault.py
migrations/: 001_init.sql  002_improve_schema.sql
tests/: test_passwords.py
