[project]
name = "password-manager-backend"
version = "0.1.0"
description = "Password Manager API (PostgreSQL + FastAPI + psycopg, raw SQL)"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "passlib[argon2]>=1.7.4",
  "cryptography>=42.0.8",
  "python-jose[cryptography]>=3.3.0",
  "httpx>=0.27.2",
  "bcrypt>=4.3.0",
]

[tool.uv]
package = false

dev-dependencies = [
  "ruff>=0.5.6",
  "mypy>=1.11.1",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "coverage[toml]>=7.6.1",
  "pre-commit>=3.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E","W","F","I","UP","B","C4","SIM","T20","RUF"]
ignore = ["E203","E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["**/__init__.py"]

[tool.coverage.report]
skip_empty = true
show_missing = true

